@@ -1,5 +1,16 @@
 2014-08-06  Brian J. Burg  <burg@cs.washington.edu>
 
+        REGRESSION(r172094): tests fail because Inspector test harness does not include UIString
+        https://bugs.webkit.org/show_bug.cgi?id=135658
+
+        Reviewed by Joseph Pecoraro.
+
+        * UserInterface/Base/Test.js:
+        (WebInspector.contentLoaded): Fix brace placement.
+        (WebInspector.UIString): Added. This is the identity function during testing.
+
+2014-08-06  Brian J. Burg  <burg@cs.washington.edu>
+
         Web Inspector: convert ReplayManager to a promise-based API
         https://bugs.webkit.org/show_bug.cgi?id=135249
 
